# gojep

./: .gitignore  .mcp.json  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
GPU_providers/lightning/: main.py
GPU_providers/modal/: batch_analyse.py  qwen_server.py
GPU_providers/modal_app/: gemma_server.py
GPU_providers/runpod/: batch_analyse.py
api/: main.py  models.py  service.py
cli/: __init__.py  analysis.py  awards.py  emails.py  extract_awards.py  extract_tenders.py  runner.py  tenders.py  utils.py
config/: __init__.py  secrets.py  settings.py
db/: __init__.py  supabase_client.py  tender_row_mapping.py
db/awards/: __init__.py  award_row_mapping.py
db/client/: __init__.py  supabase_client.py
db/emails/: __init__.py  email_actions.py  email_updates.py
db/migrations/: 001_create_email_updates.sql  002_create_email_actions.sql  003_email_actions_queue.sql  004_email_updates_extracted_dates.sql  005_add_narrative_analysis.sql
db/tenders/: __init__.py
modules/: __init__.py
modules/analysis/: analyse.py  analyse_tender.py  call.py  chunk.py  extract.py  fetch.py  parse.py  prompt.py
modules/awards/: __init__.py  get_awards.py  get_awards_details.py
modules/document_processing/: extract.py
modules/emails/: assess_new_documents.py  (+4 more)
ops/: __init__.py  reconcile_awards.py  reconcile_tenders.py
tools/: backfill_narratives.py  cleanup_expired.py  email_task.xml  migrate_tender_folder_structure.py  pull_extractions.py  run_emails.bat  run_tenders.bat  separate_tender_files.py  sync_drive.py  upload_docs_to_supabase.py
(+16 files in other folders)
