[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gojep-tender-platform"
version = "0.1.0"
description = "GOJEP tender extraction and LLM analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=4.0.0",
    "pandas>=2.0.0",
    "lxml>=4.9.0",
    "openpyxl>=3.1.0",
    "supabase>=2.0.0",
    "postgrest>=0.10.0",
    "aiohttp>=3.8.0",
    "pypdf>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "config*", "modules*", "analysis*", "db*", "ops*", "tools*"]

[project.scripts]
tenders = "cli.main:main"
